--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <header>
-    <div id="title">
+    <div>
         <h1>Verse Tomatensoep</h1>
         <hr />
         <img alt="basis-tomatensoep" src="basis-tomatensoep.jpg">
@@ -19,7 +19,7 @@
 </header>
 
 <main>
-    <div id="first main">
+    <div>
         <h2>Ingrediënten</h2>
         <nav>
         <ul>
@@ -38,7 +38,7 @@
     </div>
 
 
-    <div id="second main">
+    <div>
     <article>
         <section>
             <h2>Bereiding</h2>
